feat: ストリームを見られるようにする
